cloud-core/kubernetes/experiments/network/ingress/v1.11/sticky/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders
  labels:
    app: echoheaders
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheaders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoheaders
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoheaders
  template:
    metadata:
      labels:
        app: echoheaders
    spec:
      containers:
      - name: echoheaders
        image: googlecontainer/echoserver:1.7
        ports:
        - containerPort: 8080
